--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,12 @@ jobs:
     - uses: actions/checkout@v3
     - name: Login Dockerhub
       env: 
-        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      run: echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      run: |
+       echo '{"auths": {"https://index.docker.io/v1/": {"auth": "'$(echo -n "$DOCKER_USERNAME:$DOCKER_PASSWORD" | base64 -w 0)'"}}}' > ~/docker_auth.json
+       export DOCKER_AUTH_CONFIG=~/docker_auth.json
+       docker login -u "$DOCKER_USERNAME" --password-stdin
 
     - name: Build the Docker image
       run: docker build -t cicd-pipeline . 
