--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,11 @@ jobs:
        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       run: |
        echo '{"auths": {"https://index.docker.io/v1/": {"auth": "'$(echo -n "$DOCKER_USERNAME:$DOCKER_PASSWORD" | base64 -w 0)'"}}}' > ~/docker_auth.json
-       export DOCKER_AUTH_CONFIG=~/docker_auth.json
-       docker login -u "$DOCKER_USERNAME" --password-stdin
+       export DOCKER_CONFIG=~/docker_config
+       mkdir -p $DOCKER_CONFIG
+       mv ~/docker_auth.json $DOCKER_CONFIG/config.json
+       docker login -u "$DOCKER_USERNAME" --config=$DOCKER_CONFIG --password-stdin
+
 
     - name: Build the Docker image
       run: docker build -t cicd-pipeline . 
