--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,6 @@ jobs:
       run: echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 
     - name: Build the Docker image
-      run: docker build -t cicd-pipeline . 
+      run: docker build --build-arg BASE=debian:stretch -t cicd-pipeline . 
     - name: Push to Dockerhub
       run: docker push prthmsh77/cicd-pipeline:latest
